# rebot-api

./: .gitignore  DATA-ROADMAP.md  PROJECT.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml
api/: i18n.py  main.py  storage.py
api/core/: bddk_mapper.py  factors.py  signing.py  verifier.py  waste_codes.py
api/core/parser/: waste.py
api/models/: ingest.py  invoice.py
api/routers/: emission_factors.py  esg.py  ewc_codes.py  factors.py  ingest.py  invoices.py  signing.py  waste_codes.py
data/emission_factors/: defra_2024.json  tuik_electricity_tr_2023.json
data/waste_codes/: ewc_tr.json
demo/: README.md  app.py  requirements.txt
demo/sample_invoices/: 01_full_recycling.json  02_mixed_disposal.json  03_landfill_only.json
docs/: deploy-github-pages.md  deploy-hf-spaces.md  deploy-render.md
examples/requests/: waste_ingest.json
examples/responses/: esg_bundle_signed.json
site/: index.html
tests/: test_bddk_mapper.py  test_esg_endpoint.py  test_ewc_codes.py  test_i18n.py  test_ingest_endpoint.py  test_invoices_endpoint.py  test_signing.py  test_smoke.py  test_waste_codes.py
tests/parsers/: test_waste.py
tests/verifier/: test_verifier.py
