[project]
name = "rebot-api"
version = "0.1.0"
description = "Open source ESG verification API for SMEs — BDDK YVO + GHG Protocol compliant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "REBOT ENERGY contributors" }]
keywords = ["esg", "green-finance", "bddk", "ghg-protocol", "carbon", "fintech", "turkey"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "pynacl>=1.5",
]

[project.optional-dependencies]
parsers = [
    "pdfplumber>=0.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "jsonschema>=4.23",
]

[project.urls]
Homepage = "https://github.com/memirutku/rebot-api"
Repository = "https://github.com/memirutku/rebot-api"
Issues = "https://github.com/memirutku/rebot-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# api/main.py embeds a Swagger UI HTML template with unavoidable long lines
# (CDN URLs, inline SVG favicon as data URI).
"api/main.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
